Implementing the functionality to render videos.

--- a/demo/index.html
+++ b/demo/index.html
@@ -157,7 +157,19 @@
                     </div> <!-- .grid -->
                 </div> <!-- #trajectory-section -->
                 <div class="render section">
-                    Render Section
+                    <div class="ui negative hidden message"></div> <!-- .message -->
+                    <div class="ui grid">
+                        <div class="column">
+                            <label>City Viewer</label>
+                            <div class="image-viewer">
+                            </div> <!-- .image-viewer -->
+                            <div class="ui indicating progress">
+                                <div class="bar"></div>
+                            </div> <!-- .progress -->
+                            <button class="ui primary button">Render Video</button>
+                            <button class="ui green button">Play Video</button>
+                        </div> <!-- .column -->
+                    </div> <!-- .grid -->
                 </div> <!-- #render-section -->
             </div> <!-- .twelve.wide.column -->
         </div> <!-- .grid -->
