Implementing the functionality to render cities.

--- a/demo/index.html
+++ b/demo/index.html
@@ -163,8 +163,10 @@
                             <label>City Viewer</label>
                             <div class="image-viewer">
                             </div> <!-- .image-viewer -->
-                            <div class="ui indicating progress">
-                                <div class="bar"></div>
+                            <div class="ui progress">
+                                <div class="blue bar">
+                                    <div class="centered progress"></div>
+                                </div> <!-- .bar -->
                             </div> <!-- .progress -->
                             <button class="ui primary button">Render Video</button>
                             <button class="ui green button">Play Video</button>
