Implementing inpainting city layouts with MaskGIT.

--- a/demo/index.html
+++ b/demo/index.html
@@ -88,7 +88,7 @@
                                         <option value="32768">32768x32768</option>
                                     </select>
                                 </div> <!-- .five.wide.field -->
-                                <div class="two wide field">
+                                <div class="five wide field">
                                     <label>&nbsp;</label>
                                     <button class="ui primary button">Generate</button>
                                 </div> <!-- .two.wide.field -->
